# duckdb-demo

./: .env.example  .gitignore  README.md  README_API.md  config.py  crud.py  data_loader.py  database.py  example_sqlalchemy.py  main.py  main_api.py  pyproject.toml  r2_storage.py  router.py  schemas.py  upload_r2.py
.zed/: settings.json
